--- a/views/about.html
+++ b/views/about.html
@@ -91,8 +91,15 @@
   <br>
   
   <p1>  Have an idea to improve XCG? Hate us? Love us? Want to join our team? We want to hear from you <br>
-  (make this some sort of clickable box where they can add their e-mail address and leave a comment). <br>
+  <br>
   </p2>
+<form>
+  First name:<br>
+  <input type="text" name="firstname"><br>
+  Comment:<br>
+  <input type="text" name="comment"> <br>
+  <input type = "submit">
+</form>
   
   <br>
   
