--- a/views/about.html
+++ b/views/about.html
@@ -90,7 +90,7 @@
   </h3>
   <br>
   
-  <p1>  Have an idea to improve XCG? Hate us? Love us? Want to join our team? We want to hear from you <br>
+  <p1>  Have an idea to improve XCG? Want to join our team? We want to hear from you <br>
   <br>
   </p2>
 <form>
