--- a/views/fragments/events-list.html
+++ b/views/fragments/events-list.html
@@ -1,12 +1,16 @@
 <ul>
   {% for event in events %}
-<<<<<<< HEAD
+
     <li class="event" id="event-{{event.id}}">
       {{event.title}}.
-=======
+
     <li class="event" id="event-{{event.id}}"> 
       <a href="/events/{{event.id}}">{{event.title}}</a>.
->>>>>>> master
+     <form>
+  To RSVP, input email here:<br>
+  <input type="email" id="email" name="email"><br>
+  <input type="submit">
+</form>
       <time datetime="{{event.date}}">{{event.date|prettyDate}}</time>
       {{event.attending.length}} attending so far.
     </li>
